fixed contact input text align

--- a/css/style.css
+++ b/css/style.css
@@ -603,6 +603,8 @@ ol {
 .contact-form-label {
     font-size: 12px;
     font-weight: bold;
+
+    text-align: start;
 }
 
 .contact-form-textarea {
